// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Applications index test snapshots loading 1`] = `
.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c16 {
  font-family: 'proxima-nova',Helvetica,Arial,sans-serif;
  font-size: 14px;
  font-weight: 400;
  text-transform: none;
  font-style: normal;
  color: #00b3ec;
}

.c7 svg {
  fill: !important;
  height: 24px;
  width: 24px;
}

.c7.downward {
  -webkit-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
}

.c7.upward {
  -webkit-transform: initial;
  -ms-transform: initial;
  transform: initial;
}

.c7 .c15 {
  margin-left: 4px;
}

.c7 img {
  width: 24px;
}

.c11 svg {
  fill: !important;
  height: 16px;
  width: 16px;
}

.c11.downward {
  -webkit-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
}

.c11.upward {
  -webkit-transform: initial;
  -ms-transform: initial;
  transform: initial;
}

.c11 .c15 {
  margin-left: 4px;
}

.c11 img {
  width: 16px;
}

.c10.MuiButton-root {
  height: 32px;
  font-size: 12px;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
  line-height: 1;
  border-radius: 2px;
  font-weight: 600;
}

.c10.MuiButton-outlined {
  padding: 8px 12px;
  border-color: #d8d8d8;
}

.c14 {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c5 {
  height: 40px;
  width: 40px;
}

.c5.MuiIconButton-root {
  background-color: #F6F7F9;
  color: #737373;
}

.c5.MuiIconButton-root:hover {
  background-color: #fff;
  color: #009CCC;
}

.c4 {
  padding-right: 12px;
}

.c13 {
  padding: calc(24px - 4px) 24px;
  background-color: rgba(255,255,255,0.7);
  color: #737373;
  border-radius: 0 0 8px 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c13 a {
  color: #00b3ec;
}

.c0 {
  width: 100%;
  margin: 0 auto;
}

.c8 {
  padding: 24px;
  background-color: #fff;
  border-radius: 8px 8px 0 0;
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-size: 20px;
  height: 32px;
}

.c3 {
  color: #fff;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
  max-width: 300px;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: inherit;
  font-size: 20px;
  height: 80px;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  padding: 0 12px 0 24px;
  position: -webkit-sticky;
  position: sticky;
  top: 0;
  z-index: 2;
  background: inherit;
}

.c1 .MuiListItemIcon-root {
  min-width: 30px;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c9 > .actionButton.btn {
  margin-right: 12px;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1 count-header"
    >
      <div
        class="c2"
      >
        <div
          class="makeStyles-path-18"
          style="align-items: center;"
        >
          <span
            class="c3 makeStyles-labelLink-22"
            title="Applications"
          >
            Applications
          </span>
        </div>
      </div>
      <div
        class="c4"
      >
        <button
          aria-haspopup="true"
          class="MuiButtonBase-root MuiIconButton-root c5"
          tabindex="0"
          title="Account settings"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <div
              class="c6 c7"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
                />
              </svg>
            </div>
          </span>
        </button>
      </div>
    </div>
    <div
      style="display: flex; flex-direction: column; width: calc(100% - 4px); height: calc(100vh - 80px); overflow-wrap: normal; overflow-x: scroll; padding: 0px 12px; margin: 0px auto;"
    >
      <div
        class="c8"
      >
        <div
          style="display: flex; align-items: center; justify-content: space-between;"
        >
          <div
            class="c9"
          >
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-outlined c10 actionButton btn MuiButton-outlinedPrimary MuiButton-disableElevation"
              id="add-application"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label"
              >
                <span
                  class="MuiButton-startIcon MuiButton-iconSizeMedium"
                >
                  <div
                    class="c6 c11"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
                      />
                    </svg>
                  </div>
                </span>
                ADD AN APPLICATION
              </span>
            </button>
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-outlined c10 MuiButton-outlinedPrimary MuiButton-disableElevation"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label"
              >
                <div
                  class="c6 c11 makeStyles-externalIcon-17"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 19H5V5h7V3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z"
                    />
                  </svg>
                </div>
                GO TO OPEN PULL REQUESTS
              </span>
            </button>
          </div>
        </div>
        <div
          class="c12 "
        >
          <div
            class="MuiCircularProgress-root MuiCircularProgress-colorPrimary MuiCircularProgress-indeterminate"
            role="progressbar"
            style="width: 40px; height: 40px; color: rgb(0, 179, 236);"
          >
            <svg
              class="MuiCircularProgress-svg"
              viewBox="22 22 44 44"
            >
              <circle
                class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate"
                cx="44"
                cy="44"
                fill="none"
                r="20.2"
                stroke-width="3.6"
              />
            </svg>
          </div>
        </div>
      </div>
      <div
        class="c13"
      >
        <div>
          Need help? Raise a 
          <a
            class="c14"
            href="https://weavesupport.zendesk.com/"
            rel="noreferrer"
            target="_blank"
          >
            <span
              class="c15 c16"
              color="primary"
            >
              support ticket
            </span>
          </a>
        </div>
        <div
          class=""
        >
          Weave GitOps Enterprise 
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Applications index test snapshots success 1`] = `
.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c16 {
  font-family: 'proxima-nova',Helvetica,Arial,sans-serif;
  font-size: 14px;
  font-weight: 400;
  text-transform: none;
  font-style: normal;
  color: #00b3ec;
}

.c7 svg {
  fill: !important;
  height: 24px;
  width: 24px;
}

.c7.downward {
  -webkit-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
}

.c7.upward {
  -webkit-transform: initial;
  -ms-transform: initial;
  transform: initial;
}

.c7 .c15 {
  margin-left: 4px;
}

.c7 img {
  width: 24px;
}

.c11 svg {
  fill: !important;
  height: 16px;
  width: 16px;
}

.c11.downward {
  -webkit-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
}

.c11.upward {
  -webkit-transform: initial;
  -ms-transform: initial;
  transform: initial;
}

.c11 .c15 {
  margin-left: 4px;
}

.c11 img {
  width: 16px;
}

.c10.MuiButton-root {
  height: 32px;
  font-size: 12px;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
  line-height: 1;
  border-radius: 2px;
  font-weight: 600;
}

.c10.MuiButton-outlined {
  padding: 8px 12px;
  border-color: #d8d8d8;
}

.c14 {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c5 {
  height: 40px;
  width: 40px;
}

.c5.MuiIconButton-root {
  background-color: #F6F7F9;
  color: #737373;
}

.c5.MuiIconButton-root:hover {
  background-color: #fff;
  color: #009CCC;
}

.c4 {
  padding-right: 12px;
}

.c13 {
  padding: calc(24px - 4px) 24px;
  background-color: rgba(255,255,255,0.7);
  color: #737373;
  border-radius: 0 0 8px 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c13 a {
  color: #00b3ec;
}

.c0 {
  width: 100%;
  margin: 0 auto;
}

.c8 {
  padding: 24px;
  background-color: #fff;
  border-radius: 8px 8px 0 0;
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-size: 20px;
  height: 32px;
}

.c3 {
  color: #fff;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
  max-width: 300px;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: inherit;
  font-size: 20px;
  height: 80px;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  padding: 0 12px 0 24px;
  position: -webkit-sticky;
  position: sticky;
  top: 0;
  z-index: 2;
  background: inherit;
}

.c1 .MuiListItemIcon-root {
  min-width: 30px;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c9 > .actionButton.btn {
  margin-right: 12px;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1 count-header"
    >
      <div
        class="c2"
      >
        <div
          class="makeStyles-path-34"
          style="align-items: center;"
        >
          <span
            class="c3 makeStyles-labelLink-38"
            title="Applications"
          >
            Applications
          </span>
        </div>
      </div>
      <div
        class="c4"
      >
        <button
          aria-haspopup="true"
          class="MuiButtonBase-root MuiIconButton-root c5"
          tabindex="0"
          title="Account settings"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <div
              class="c6 c7"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
                />
              </svg>
            </div>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
    <div
      style="display: flex; flex-direction: column; width: calc(100% - 4px); height: calc(100vh - 80px); overflow-wrap: normal; overflow-x: scroll; padding: 0px 12px; margin: 0px auto;"
    >
      <div
        class="c8"
      >
        <div
          style="display: flex; align-items: center; justify-content: space-between;"
        >
          <div
            class="c9"
          >
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-outlined c10 actionButton btn MuiButton-outlinedPrimary MuiButton-disableElevation"
              id="add-application"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label"
              >
                <span
                  class="MuiButton-startIcon MuiButton-iconSizeMedium"
                >
                  <div
                    class="c6 c11"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
                      />
                    </svg>
                  </div>
                </span>
                ADD AN APPLICATION
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-outlined c10 MuiButton-outlinedPrimary MuiButton-disableElevation"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label"
              >
                <div
                  class="c6 c11 makeStyles-externalIcon-33"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 19H5V5h7V3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z"
                    />
                  </svg>
                </div>
                GO TO OPEN PULL REQUESTS
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </div>
        </div>
        <div
          class="c12 "
        >
          <div
            class="MuiCircularProgress-root MuiCircularProgress-colorPrimary MuiCircularProgress-indeterminate"
            role="progressbar"
            style="width: 40px; height: 40px; color: rgb(0, 179, 236);"
          >
            <svg
              class="MuiCircularProgress-svg"
              viewBox="22 22 44 44"
            >
              <circle
                class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate"
                cx="44"
                cy="44"
                fill="none"
                r="20.2"
                stroke-width="3.6"
              />
            </svg>
          </div>
        </div>
      </div>
      <div
        class="c13"
      >
        <div>
          Need help? Raise a 
          <a
            class="c14"
            href="https://weavesupport.zendesk.com/"
            rel="noreferrer"
            target="_blank"
          >
            <span
              class="c15 c16"
              color="primary"
            >
              support ticket
            </span>
          </a>
        </div>
        <div
          class=""
        >
          Weave GitOps Enterprise 
        </div>
      </div>
    </div>
  </div>
</div>
`;
